Fix "Our Philosophy" image alignment and responsiveness in CSS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -321,7 +321,7 @@ header {
     position: relative;
     justify-content: center;
     align-items: center;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0);
     padding: 5px;
     border-radius: 0;
     box-shadow: 0 15px 24px -6px rgba(0, 0, 0, 0.5);
